// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Object array in body 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "getid",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "patch": {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "an array",
                "items": {
                  "default": {
                    "parameter1": "default",
                  },
                  "description": "My body description",
                  "nullable": true,
                  "properties": {
                    "parameter1": {
                      "description": "String parameter",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
          },
          "description": "an array",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "post": {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "an array",
                "items": {
                  "default": {
                    "parameter1": "default",
                  },
                  "description": "My body description",
                  "nullable": true,
                  "properties": {
                    "parameter1": {
                      "description": "String parameter",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
          },
          "description": "an array",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "getid",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "patch": {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "example": {
                "parameter1": "default",
              },
              "schema": {
                "default": {
                  "parameter1": "default",
                },
                "description": "My body description",
                "nullable": true,
                "properties": {
                  "parameter1": {
                    "description": "String parameter",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "My body description",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "post": {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "example": {
                "parameter1": "default",
              },
              "schema": {
                "default": {
                  "parameter1": "default",
                },
                "description": "My body description",
                "nullable": true,
                "properties": {
                  "parameter1": {
                    "description": "String parameter",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "My body description",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "patch": {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Parameter without description.",
                "properties": {
                  "base64array": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": {
                    "description": "Parameter without description.",
                    "properties": {
                      "boolean": {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "properties": {
                        "obj": {
                          "description": "Parameter without description.",
                          "properties": {
                            "boolean": {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "description": "Error object",
                  "example": {
                    "id": 123,
                    "name": "customer name",
                  },
                  "properties": {
                    "id": {
                      "description": "Customer ID (min:36 chars, max:36 chars)",
                      "format": "uuid",
                      "type": "string",
                    },
                    "name": {
                      "description": "Customer name (max:100 chars)",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Failed Operation",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "post": {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Parameter without description.",
                "properties": {
                  "base64array": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": {
                    "description": "Parameter without description.",
                    "properties": {
                      "boolean": {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "properties": {
                        "obj": {
                          "description": "Parameter without description.",
                          "properties": {
                            "boolean": {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple 2`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "patch": {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Parameter without description.",
                "properties": {
                  "base64array": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": {
                    "description": "Parameter without description.",
                    "properties": {
                      "boolean": {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "properties": {
                        "obj": {
                          "description": "Parameter without description.",
                          "properties": {
                            "boolean": {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "post": {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Parameter without description.",
                "properties": {
                  "base64array": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": {
                    "description": "Parameter without description.",
                    "properties": {
                      "boolean": {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "properties": {
                        "obj": {
                          "description": "Parameter without description.",
                          "properties": {
                            "boolean": {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple, with models 1`] = `
{
  "components": {
    "schemas": {
      "InternalObject": {
        "description": "Parameter without description.",
        "properties": {
          "boolean": {
            "description": "Parameter without description.",
            "type": "boolean",
          },
          "uuid": {
            "description": "Parameter without description. (min:36 chars, max:36 chars)",
            "format": "uuid",
            "type": "string",
          },
        },
        "type": "object",
      },
      "ObjectSimple": {
        "description": "Parameter without description.",
        "properties": {
          "base64array": {
            "description": "Parameter without description.",
            "items": {
              "description": "Parameter without description. (base64 encoded string)",
              "format": "byte",
              "type": "string",
            },
            "type": "array",
          },
          "binary": {
            "description": "Parameter without description. (binary string)",
            "format": "binary",
            "type": "string",
          },
          "boolean": {
            "description": "Parameter without description.",
            "type": "boolean",
          },
          "byte": {
            "description": "Parameter without description. (base64 encoded string)",
            "format": "byte",
            "type": "string",
          },
          "date": {
            "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
            "format": "date",
            "type": "string",
          },
          "dateTime": {
            "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
            "format": "date-time",
            "type": "string",
          },
          "float": {
            "description": "Parameter without description.",
            "format": "double",
            "type": "number",
          },
          "integer": {
            "description": "Parameter without description.",
            "format": "int64",
            "type": "integer",
          },
          "internalobject": {
            "$ref": "#/components/schemas/InternalObject",
          },
          "objectArray": {
            "$ref": "#/components/schemas/UuidList",
          },
          "string": {
            "description": "Parameter without description.",
            "type": "string",
          },
          "stringarray": {
            "description": "Parameter without description.",
            "items": {
              "description": "Parameter without description.",
              "type": "string",
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "UuidList": {
        "description": "Parameter without description.",
        "items": {
          "$ref": "#/components/schemas/UuidObject",
        },
        "type": "array",
      },
      "UuidObject": {
        "description": "Parameter without description.",
        "properties": {
          "obj": {
            "description": "Parameter without description.",
            "properties": {
              "boolean": {
                "description": "Parameter without description.",
                "type": "boolean",
              },
              "uuid": {
                "description": "Parameter without description. (min:36 chars, max:36 chars)",
                "format": "uuid",
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "patch": {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ObjectSimple",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "post": {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/ObjectSimple",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple, with named response model 1`] = `
{
  "components": {
    "schemas": {
      "ErrorResponse": {
        "description": "Error object",
        "example": {
          "id": 123,
          "name": "customer model",
        },
        "properties": {
          "id": {
            "description": "Customer ID (min:36 chars, max:36 chars)",
            "format": "uuid",
            "type": "string",
          },
          "name": {
            "description": "Customer name (max:100 chars)",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "patch": {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Parameter without description.",
                "properties": {
                  "base64array": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": {
                    "description": "Parameter without description.",
                    "properties": {
                      "boolean": {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "properties": {
                        "obj": {
                          "description": "Parameter without description.",
                          "properties": {
                            "boolean": {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorResponse",
                },
              },
            },
            "description": "Failed Operation",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
      "post": {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Parameter without description.",
                "properties": {
                  "base64array": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": {
                    "description": "Parameter without description.",
                    "properties": {
                      "boolean": {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "properties": {
                        "obj": {
                          "description": "Parameter without description.",
                          "properties": {
                            "boolean": {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
